--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-loading": "^2.0.3",
     "sass": "^1.79.5"
   },
   "devDependencies": {
